--- a/setup.cfg
+++ b/setup.cfg
@@ -16,8 +16,8 @@ exclude = .venv,.antoher_venv,separate_file.py
 ignore =
 
 [tool:pytest]
-norecursedirs = __pycache__
-addopts = --strict-markers --cov=.
+# norecursedirs = __pycache__
+# addopts = --strict-markers --cov=.
 ; --cov-report=xml
 
 [isort]
